--- a/swagger-spring-boot-starter/pom.xml
+++ b/swagger-spring-boot-starter/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.shield</groupId>
     <artifactId>spring-boot-starters</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
   </parent>
   <groupId>org.shield</groupId>
   <artifactId>swagger-spring-boot-starter</artifactId>
