--- a/kafka-spring-boot-starter/pom.xml
+++ b/kafka-spring-boot-starter/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.shield</groupId>
     <artifactId>spring-boot-starters</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2</version>
   </parent>
   <groupId>org.shield</groupId>
   <artifactId>kafka-spring-boot-starter</artifactId>
@@ -15,6 +15,10 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-json</artifactId>
+    </dependency>
     <!-- Spring Kafka -->
     <dependency>
       <groupId>org.springframework.kafka</groupId>
