--- a/admin-spring-boot-starter/pom.xml
+++ b/admin-spring-boot-starter/pom.xml
@@ -4,11 +4,11 @@
   <parent>
     <groupId>org.shield</groupId>
     <artifactId>spring-boot-starters</artifactId>
-    <version>1.7.2</version>
+    <version>1.8.0</version>
   </parent>
   <groupId>org.shield</groupId>
   <artifactId>admin-spring-boot-starter</artifactId>
-  <version>1.7.2</version>
+  <version>1.8.0</version>
   <name>通用系统管理模块</name>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -70,6 +70,10 @@
     <dependency>
       <groupId>org.shield</groupId>
       <artifactId>validation-spring-boot-starter</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-autoconfigure</artifactId>
     </dependency>
   </dependencies>
 </project>
