--- a/storage-spring-boot-starter/pom.xml
+++ b/storage-spring-boot-starter/pom.xml
@@ -7,19 +7,26 @@
     <version>1.8.0</version>
   </parent>
   <groupId>org.shield</groupId>
-  <artifactId>swagger-spring-boot-starter</artifactId>
+  <artifactId>storage-spring-boot-starter</artifactId>
   <version>1.8.0</version>
-  <name>swagger-spring-boot-starter</name>
-  <url>http://maven.apache.org</url>
+  <name>storage-spring-boot-starter</name>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
-    <!-- Springfox Swagger -->
+    <!-- Spring Web Service -->
     <dependency>
-      <groupId>io.springfox</groupId>
-      <artifactId>springfox-boot-starter</artifactId>
-      <version>3.0.0</version>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.shield</groupId>
+      <artifactId>swagger-spring-boot-starter</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.pig4cloud.plugin</groupId>
+      <artifactId>oss-spring-boot-starter</artifactId>
+      <version>0.0.4</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
